--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
-  "dependencies": {},
+  "dependencies": {
+    "file-loader": "^1.1.11"
+  },
   "scripts": {
     "build": "webpack",
     "start": "webpack-serve",
